# TraceT

./: .gitignore  manage.py  pyproject.toml
TraceT2/: asgi.py  settings.py  urls.py  wsgi.py
TraceT2App/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py  vote.py
TraceT2App/data/: GCNStream.yaml
TraceT2App/migrations/: 0001_initial.py  0001_squashed_0028_remove_decision_type_decision_simulated.py  0002_alter_mwa_trigger.py  0003_alter_gcnstream_name.py  0004_eventgroup_time.py  0005_containscondition.py  0006_rename_event_notice_and_more.py  0007_rename_events_eventgroup_notices.py  0008_rename_eventgroup_event.py  0009_remove_mwa_minimum_altitude_mwa_exposure_mwa_nobs_and_more.py  0010_mwa_password.py  0011_observation_alter_mwa_frequency.py  0012_trigger_priority.py  0013_remove_trigger_active_trigger_testing.py  0014_remove_trigger_testing_trigger_active_and_more.py  0015_rename_success_observation_status.py  0016_rename_end_observation_finish_and_more.py  0017_alter_observation_status.py  0018_remove_observation_status_observation_istest_and_more.py  0019_observation_event_observation_trigger.py  0020_atca_bandconfig.py  0021_atca_trigger.py  0022_rename_bandconfig_atcaband.py  0025_alter_mwa_tileset.py  (+22 more)
deploy/: docker-compose.yml  tracet.service
docker/: Dockerfile  docker-compose.yml
project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 403.html  404.html  base.html  skeleton.html
tracet/: admin.py  apps.py  filters.py  forms.py  rules.py  signals.py  urls.py  validators.py  views.py
(+128 files in other folders)
